tests/expectations/parser-statement/unreachable/expect_ident.out
Error [EPAR0370005]: expected '[' -- found ';'
    --> test_0:1:4
     |
   1 | x::;
     |    ^
Error [EPAR0370005]: expected '[' -- found '.'
    --> test_1:1:4
     |
   1 | x::.
     |    ^
Error [EPAR0370003]: unexpected EOF
    --> test_2:1:9
     |
   1 | x::import
     |         ^
Error [EPAR0370005]: expected '[' -- found ','
    --> test_3:1:4
     |
   1 | x::,
     |    ^
Error [EPAR0370005]: expected '[' -- found '*'
    --> test_4:1:4
     |
   1 | x::*
     |    ^
Error [EPAR0370005]: expected '[' -- found '+'
    --> test_5:1:4
     |
   1 | x::+
     |    ^
Error [EPAR0370005]: expected '[' -- found '-'
    --> test_6:1:4
     |
   1 | x::-
     |    ^
Error [EPAR0370005]: expected '[' -- found '/'
    --> test_7:1:4
     |
   1 | x::/
     |    ^
Error [EPAR0370003]: unexpected EOF
    --> test_8:1:4
     |
   1 | x::[
     |    ^
Error [EPAR0370005]: expected '[' -- found ']'
    --> test_9:1:4
     |
   1 | x::]
     |    ^
Error [EPAR0370005]: expected '[' -- found '{'
    --> test_10:1:4
     |
   1 | x::{
     |    ^
Error [EPAR0370005]: expected '[' -- found '}'
    --> test_11:1:4
     |
   1 | x::}
     |    ^
Error [EPAR0370005]: expected '[' -- found '('
    --> test_12:1:4
     |
   1 | x::(
     |    ^
Error [EPAR0370005]: expected '[' -- found ')'
    --> test_13:1:4
     |
   1 | x::)
     |    ^
Error [EPAR0370005]: expected '[' -- found ':'
    --> test_14:1:4
     |
   1 | x:::
     |    ^
Error [EPAR0370005]: expected '[' -- found '::'
    --> test_15:1:4
     |
   1 | x::::
     |    ^^
Error [EPAR0370005]: expected '[' -- found '?'
    --> test_16:1:4
     |
   1 | x::?
     |    ^
Error [EPAR0370005]: expected '[' -- found '_'
    --> test_17:1:4
     |
   1 | x::_
     |    ^
Error [EPAR0370005]: expected '[' -- found '='
    --> test_18:1:4
     |
   1 | x::=
     |    ^
Error [EPAR0370005]: expected '[' -- found '=='
    --> test_19:1:4
     |
   1 | x::==
     |    ^^
Error [EPAR0370005]: expected '[' -- found '!'
    --> test_20:1:4
     |
   1 | x::!
     |    ^
Error [EPAR0370005]: expected '[' -- found '!='
    --> test_21:1:4
     |
   1 | x::!=
     |    ^^
Error [EPAR0370005]: expected '[' -- found '>'
    --> test_22:1:4
     |
   1 | x::>
     |    ^
Error [EPAR0370005]: expected '[' -- found '>='
    --> test_23:1:4
     |
   1 | x::>=
     |    ^^
Error [EPAR0370005]: expected '[' -- found '<'
    --> test_24:1:4
     |
   1 | x::<
     |    ^
Error [EPAR0370005]: expected '[' -- found '<='
    --> test_25:1:4
     |
   1 | x::<=
     |    ^^
Error [EPAR0370005]: expected '[' -- found '>'
    --> test_26:1:4
     |
   1 | x::>
     |    ^
Error [EPAR0370005]: expected '[' -- found '..'
    --> test_27:1:4
     |
   1 | x::..
     |    ^^
Error [EPAR0370003]: unexpected EOF
    --> test_28:1:5
     |
   1 | x::as
     |     ^
Error [EPAR0370003]: unexpected EOF
    --> test_29:1:8
     |
   1 | x::const
     |        ^
Error [EPAR0370003]: unexpected EOF
    --> test_30:1:6
     |
   1 | x::let
     |      ^
Error [EPAR0370003]: unexpected EOF
    --> test_31:1:6
     |
   1 | x::for
     |      ^
Error [EPAR0370003]: unexpected EOF
    --> test_32:1:5
     |
   1 | x::if
     |     ^
Error [EPAR0370003]: unexpected EOF
    --> test_33:1:7
     |
   1 | x::else
     |       ^
Error [EPAR0370003]: unexpected EOF
    --> test_34:1:5
     |
   1 | x::i8
     |     ^
Error [EPAR0370003]: unexpected EOF
    --> test_35:1:6
     |
   1 | x::i16
     |      ^
Error [EPAR0370003]: unexpected EOF
    --> test_36:1:6
     |
   1 | x::i32
     |      ^
Error [EPAR0370003]: unexpected EOF
    --> test_37:1:6
     |
   1 | x::i64
     |      ^
Error [EPAR0370003]: unexpected EOF
    --> test_38:1:7
     |
   1 | x::i128
     |       ^
Error [EPAR0370003]: unexpected EOF
    --> test_39:1:5
     |
   1 | x::u8
     |     ^
Error [EPAR0370003]: unexpected EOF
    --> test_40:1:6
     |
   1 | x::u16
     |      ^
Error [EPAR0370003]: unexpected EOF
    --> test_41:1:6
     |
   1 | x::u32
     |      ^
Error [EPAR0370003]: unexpected EOF
    --> test_42:1:6
     |
   1 | x::u64
     |      ^
Error [EPAR0370003]: unexpected EOF
    --> test_43:1:7
     |
   1 | x::u128
     |       ^
Error [EPAR0370005]: expected '[' -- found '&'
    --> test_44:1:4
     |
   1 | x::&
     |    ^
Error [EPAR0370003]: unexpected EOF
    --> test_45:1:9
     |
   1 | x::return
     |         ^
Error [EPAR0370003]: unexpected EOF
    --> test_46:1:7
     |
   1 | x::self
     |       ^
Error [EPAR0370003]: unexpected EOF
    --> test_47:1:7
     |
   1 | x::Self
     |       ^
Error [EPAR0370003]: unexpected EOF
    --> test_48:1:7
     |
   1 | x::true
     |       ^
Error [EPAR0370003]: unexpected EOF
    --> test_49:1:8
     |
   1 | x::false
     |        ^
Error [EPAR0370005]: expected '[' -- found '0'
    --> test_50:1:4
     |
   1 | x::0
     |    ^
